--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="col-lg-6">
               <div class="image-showcase">
                 <div class="main-image">
-                  <img src="assets/img/travel/showcase-12.webp" alt="Travel Adventure" class="img-fluid rounded-3">
+                  <img src="assets/img/travel/Summit-Success.jpg" alt="Travel Adventure" class="img-fluid rounded-3">
                   <div class="overlay-badge">
                     <div class="badge-content">
                       <i class="bi bi-award-fill"></i>
@@ -305,7 +305,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-1.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Santorini.jpeg" alt="Destination" class="img-fluid">
                 <div class="overlay">
                   <div class="badge">Popular</div>
                 </div>
@@ -330,7 +330,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-5.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Bali.jpeg" alt="Destination" class="img-fluid">
                 <div class="overlay">
                   <div class="badge featured">Editor's Pick</div>
                 </div>
@@ -355,7 +355,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-8.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Machu%20Picchu.jpeg" alt="Destination" class="img-fluid">
                 <div class="overlay">
                   <div class="badge new">New</div>
                 </div>
@@ -380,7 +380,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-12.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Kyoto%20Japan.jpg" alt="Destination" class="img-fluid">
               </div>
               <div class="content">
                 <h4>Kyoto, Japan</h4>
@@ -402,7 +402,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-3.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Swiss%20Alps.jpeg" alt="Destination" class="img-fluid">
               </div>
               <div class="content">
                 <h4>Swiss Alps, Switzerland</h4>
@@ -424,7 +424,7 @@
           <div class="col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="image-wrapper">
-                <img src="assets/img/travel/destination-16.webp" alt="Destination" class="img-fluid">
+                <img src="assets/img/travel/Maldives.jpg" alt="Destination" class="img-fluid">
               </div>
               <div class="content">
                 <h4>Maldives</h4>
@@ -477,7 +477,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-12.webp" alt="Mountain Adventure" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Alpine%20Mountain%20Adventure.jpeg" alt="Mountain Adventure" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge">Best Seller</span>
@@ -510,7 +510,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-15.webp" alt="Island Hopping" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Tropical%20Island%20Hopping.png" alt="Island Hopping" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge hot">Hot Deal</span>
@@ -543,7 +543,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-18.webp" alt="Cultural Heritage" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Ancient%20Cultural%20Heritage.jpg" alt="Cultural Heritage" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge cultural">Cultural</span>
@@ -576,7 +576,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-22.webp" alt="Safari Experience" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Wildlife%20Safari%20Experience.webp" alt="Safari Experience" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge limited">Limited</span>
@@ -609,7 +609,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-25.webp" alt="Northern Lights" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Northern%20Lights%20Quest.jpg" alt="Northern Lights" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge new">New Tour</span>
@@ -642,7 +642,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-28.webp" alt="Desert Journey" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Golden%20Desert%20Journey.webp" alt="Desert Journey" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge adventure">Adventure</span>
@@ -675,7 +675,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-20.webp" alt="City Explorer" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/European%20City%20Explorer.webp" alt="City Explorer" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge popular">Popular</span>
@@ -708,7 +708,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="destination-card">
               <div class="destination-overlay">
-                <img src="assets/img/travel/tour-17.webp" alt="Coastal Paradise" class="img-fluid" loading="lazy">
+                <img src="assets/img/travel/Coastal%20Paradise%20Retreat.jpeg" alt="Coastal Paradise" class="img-fluid" loading="lazy">
                 <div class="card-overlay">
                   <div class="badge-container">
                     <span class="featured-badge luxury">Luxury</span>
